# django-erd-studio

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
django_erd_studio/: cli.py  inspector.py  server.py  writer.py
django_erd_studio/management/commands/: erd_studio.py
django_erd_studio/static/: index.html
django_erd_studio/static/assets/: html2canvas-B5InX0qV.js  html2canvas-D2zLotdC.js  index-EGzr62CL.js  index-tsPSB1tp.js  index.es-B1SV3KBH.js  index.es-x_v8ZNka.js
frontend/: debug_script.cjs  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: ERDiagram.jsx  EdgeInfoPanel.jsx  InteractiveEdge.jsx  StatsPanel.jsx  TableNode.jsx  Toast.jsx  Toolbar.jsx
frontend/src/utils/: edges.js  export.js  layout.js  sqlGenerator.js
