[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-erd-studio"
version = "0.1.0"
description = "Interactive ER Diagram Workbench for Django"
authors = [
    { name = "Your Name" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Django>=3.2",
    "Flask>=2.0",
    "libcst>=1.0",
]

[project.scripts]
django-erd = "django_erd_studio.cli:main"

[tool.setuptools]
packages = ["django_erd_studio", "django_erd_studio.management", "django_erd_studio.management.commands"]

[tool.setuptools.package-data]
"django_erd_studio" = ["static/**/*", "static/*"]
